--- a/api/src/main/resources/templates/main.html
+++ b/api/src/main/resources/templates/main.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <h1>메인페이지</h1>
-<p th:text="'Logged in as: ' + ${#authentication.principal.username}">Logged in as: user@example.com</p>
+<!--<p th:text="'Logged in as: ' + ${#authentication.principal.username}">Logged in as: user@example.com</p>-->
+
 </body>
 </html>
